--- a/style.css
+++ b/style.css
@@ -152,13 +152,17 @@ main {
   
 }
 
-/* Crypto list */
-#crypto-list {
-  flex-grow: 1;
- 
-  
-  padding: 1rem;
+#app-main {
+  display: flex;
+  gap: 20px;
+  padding: 20px;
+  align-items: flex-start;
 }
+#crypto-list {
+  flex: 2;
+  min-width: 0; /* Allows shrinking */
+}
+
 
 #list-container {
   display: flex;
@@ -167,26 +171,86 @@ main {
   justify-content: center;
 }
 
-/* Comparison Panel */
+
 #comparison-panel {
-  display: none;
-  flex-grow: 1;
+  max-height: 80vh;
+  overflow-y: auto;
+}
+#comparison-panel {
+  flex: 1;
+  min-width: 300px;
+  background-color: #f8f8f8;
+  color:black;
+  border-left: 1px solid #ccc;
+  padding: 15px;
+  border-radius: 8px;
+}
+
+#comparison-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 1rem;
+  width: 100%;
+}
+
+.comparison-item {
+  border: 1px solid #ccc;
+  border-radius: 10px;
   padding: 1rem;
-  background-color: #242436;
-  
-  flex-wrap: wrap;
+  background-color: #e9f7ef;
+  box-sizing: border-box;
+  transition: all 0.3s ease;
+  height: auto;
 }
 
-.show-comparison #crypto-sidebar {
-  display: flex;
+.comparison-item button {
+  margin-top: 10px;
+  background-color: #ff4d4d;
+  color: white;
+  border: none;
+  padding: 6px 12px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-.show-comparison #crypto-list {
-  display: none;
+/* fav panel */
+#favorites-panel {
+  flex: 1;
+  min-width: 300px;
+  background-color: #f8f8f8;
+  color: black;
+  border-left: 1px solid #ccc;
+  padding: 15px;
+  border-radius: 8px;
+  max-height: 80vh;
+  overflow-y: auto;
 }
 
-.show-comparison #comparison-panel {
-  display: flex;
+#favorites-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 1rem;
+  width: 100%;
+}
+
+.favorite-item {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 1rem;
+  background-color: #e9f7ef;
+  box-sizing: border-box;
+  transition: all 0.3s ease;
+  height: auto;
+}
+
+.favorite-item button {
+  margin-top: 10px;
+  background-color: #ff4d4d;
+  color: white;
+  border: none;
+  padding: 6px 12px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 /* Crypto Items */
@@ -215,7 +279,7 @@ main {
   flex: 1 1 calc(33% - 2rem);
   min-width: 250px;
   box-sizing: border-box;
-  height: 50%;
+  height: 275px;
   box-shadow: 0 4px 12px rgba(0, 255, 163, 0.2);
 }
 
